wr250r/_sass/articles.scss
.page-article {
	
	.article-actions {
		margin-bottom: 10px;
	}
	
	.article-body {
		h1 {
			margin-bottom: 25px;
		}
		
		.alert {
			margin: 20px 0px;
		}
		
		.data-table {
			tbody {
				font-family: courier, sans-serif;
				font-size: 13px;
			}
		}
	}
	
}

